--- a/source/_posts/复现数字货币多因子策略.md
+++ b/source/_posts/复现数字货币多因子策略.md
@@ -1,56 +1,56 @@
 ---
 
-title: 复现数字货币多因子策略
+title: Replicating Digital Currency Multi-Factor Strategies
 date: 2023-09-02 16:07:00
 categories:
-  - 量化交易
-tags:
-  - 数字货币
-  - 回测
-  - 复现
-  - 多因子
+  - Quantitative Trading
+tags: 
+  - Digital Currency
+  - Backtesting
+  - Replication
+  - Multi-factor
   - quant1098.com
   - digiccy
   - bitcoin
-  - 策略
-description: '关于多因子的量化交易策略，股票方面的资源很多，但是数字货币方面的文章并不多，这篇文章是发明者上面数字货币多因子策略的复刻，结果跟原版略有不同'
+  - Strategy
+description: There are a lot of resources on multi-factor quantitative trading strategies for stocks, but not many articles on digital currencies, this article is a replica of the inventor's multi-factor strategy for digital currencies above, with slightly different results than the original
 cover: https://s2.loli.net/2023/09/02/9x5WuNXh1A2jofR.png
 ---
 
-## 缘起
+## Origin
 
-### 股票和数字货币
+### Stocks and Digital Currency
 
-数字货币市场作为一个7* 25 全年365天不停运转的交易市场，每天产生海量的数据，相比较A股市场每天交易时间只有4个小时，想获取毫秒级的数据千难万难。数字货币市场无疑是一个更加友好的市场。
+The digital currency market is a 7*25, 365 days a year, non-stop trading market that generates huge amounts of data every day. Compared to the A-share market, which trades for only 4 hours a day, it is very difficult to get milliseconds of data. The digital currency market is undoubtedly a more friendly market.
 
-昨天还跟发小吵了一架，他还是坚持认为量化是邪恶的，是在从他们手里偷钱。而我的观点是 量化是大趋势，会量化的面对不懂量化的传统交易者是在降维打击。唯一的办法就是尽快拥抱量化，但是 人各有志，不能强劝。
+I even had a fight with my hairdresser yesterday, he still insists that quantization is evil and is stealing money from them. And my point is Quantization is the big trend, and those who know quantization are facing traditional traders who don't understand quantization in a downward spiral. The only way is to embrace quantization as soon as possible, but people have their own aspirations and cannot be persuaded.
 
 ![](https://s2.loli.net/2023/09/02/gDhXbZAkSdz3T8c.png)
 
-数字货币市场在不停的进化，从一个人手动搬砖就可以大把挣钱，到手动搬砖无法获利转向程序搬砖套利，再然后是用程序加上简单的指标进行程序化交易，再然后，简单的指标开始失效，代价逐渐开始引入因子概念。水平更高的开始向高频进军。
+The digital currency market is constantly evolving, from a person can make a lot of money by manually moving, to manual moving can not be profitable to move to the program to move arbitrage, then the program with the program coupled with a simple indicator for programmed trading, and then, the simple indicator began to fail, the cost of gradually began to introduce the concept of factors. Higher level began to high frequency.
 
-这一步一步可以明显看出。数字货币市场是一个逐渐从认知门槛到技术门槛转换的过程中，一开始只要你有赌的决心，就可以获取暴利，到现在你只有拨开眼前的迷雾，跨过认知的门槛，同时技术过硬才能获取到足以满足自己的利润。
+This step by step can be clearly seen. The digital currency market is a gradual conversion from the cognitive threshold to the technical threshold of the process, at the beginning as long as you have the determination to gamble, you can obtain profiteering, to the present you can only clear away the fog in front of you, cross the threshold of cognition, and at the same time technically sound in order to obtain enough to satisfy their own profits.
 
-这一切跟改开初期何其相似，只不过，这是一个5倍速的市场，一切都在快速进化中。希望看到这篇文章的同学能一起拥抱迎面而来的可以浪潮。获取属于自己的一份荣耀。
+All of this is similar to the early days of the reopening, except that this is a 5 times the speed of the market, everything is in the rapid evolution. I hope that students reading this article can embrace the oncoming wave together. Get your own share of the glory.
 
-### 多因子与数字货币
+### Multifactor and Digital Currency
 
-说回多因子， 本文不涉及复杂的数学建模和逻辑推导， 就是简单的用数字货币现货市场作为数据源 来构建一个因子回测框架， 方便对因子进行评价。
+Back to multi-factor, this article does not involve complex mathematical modeling and logical derivation, is simple to use the digital currency spot market as a data source to build a factor back test framework, to facilitate the evaluation of factors.
 
-因子可以看成是一个指标，也可以写成一个表达式，它代表了一种投资逻辑，反应了一种收益信息。
+Factor can be regarded as an indicator, can also be written as an expression, which represents a kind of investment logic, reflects a kind of return information.
 
-例如： 收盘价因子假设股价可预测未来收益,股价越高预示收益越高(或越低)。构建该因子组合等于定期轮换买入高价股的策略。能持续产生超额收益的因子通常称为Alpha,如经验证的有效因子——市值因子和动量因子等。
+For example: The closing price factor assumes that the stock price predicts future returns, and that higher stock prices predict higher (or lower) returns. Constructing a portfolio of this factor is equivalent to a strategy of buying high priced stocks on a regular rotation. Factors that consistently generate excess returns are often referred to as alpha, such as the market capitalization factor and the momentum factor, which are proven effective factors.
 
-无论股市或数字货币市场,都极为复杂,无法完全预测未来收益,但仍有一定可预测性。有效的Alpha投资模式随更多资金投入逐渐失效,但会催生新模式、新Alpha。
+Both the stock market and the digital currency market are extremely complex and it is impossible to fully predict future returns, but there is some predictability. Effective Alpha investment models gradually expire as more capital is invested, but new models and new Alpha will be created.
 
-市值因子曾在A股市场非常成功,2007年起十年回测,简单买最低市值股票,每天调整,获得超过400倍收益,远超大盘。但2017年小市值因子失效,价值因子反而流行,反映单一因子局限性。需在验证和使用因子间权衡。 寻找因子是策略基础,组合多个不相关有效因子可构建较佳策略。
+Market capitalization factor was very successful in the A-share market, since 2007, a decade of backtesting, simply buy the lowest market capitalization stocks, adjusted every day, gained more than 400 times the return, far more than the broader market. But in 2017, the small-cap factor failed, and the value factor became popular, reflecting the limitations of a single factor. We need to weigh the validation and use of factors. Finding factors is the basis of the strategy, combining multiple uncorrelated valid factors can build a better strategy.
 
-## 代码实现
+## Code implementation
 
-### 引入相关库
+### Introducing related libraries
 
 ```python
-# 引入相关库
+# Introduction of related libraries
 import requests
 from datetime import date,datetime
 import time
@@ -61,14 +61,14 @@ import requests, zipfile, io
 %matplotlib inline
 ```
 
-### 构建数据环境
+### Build data environment
 
-数据来源是binance交易所的现货市场， 因为这些数据我已经全部存入数据库，方便本地回测和研究，我这次选取了交易量比较大，在USDT永续期货同时开通了交易对的品种，前面说过 多因子其实是一个选币策略，要求币种要足够多，才能有足够的挑选空间。
+The source of the data is the binance exchange spot market, because all these data have been deposited into the database, so that it is convenient for local backtesting and research, I have selected the species with a relatively large trading volume, and opened the trading pairs in the USDT perpetual futures at the same time. As I said before, multi-factor is actually a strategy for selecting coins, which requires that the coins should be sufficiently large, so as to have enough space to select.
 
-先构建数据库环境，方便数据调用
+First build a database environment to facilitate the data call
 
 ```python
-## 定义数据库相关常量
+## Defining database-related constants
 start_time = "2022-01-01 00:00:00"
 end_time = "2022-09-01 00:00:00"
 rule_type = '1h'
@@ -82,26 +82,26 @@ host = ""
 port = 3306
 dbname = "binance_spot"
 
-# 初始化数据库连接，使用pymysql模块
+# Initialize the database connection, using the pymysql module
 db = pymysql.connect(host=host, port=port,user=username, passwd=password,db=dbname, charset="utf8")
-# 使用 cursor() 方法创建一个游标对象 cursor
+# Use the cursor() method to create a cursor object cursor
 con = db.cursor()
 ```
 
-### 定义常用函数
+### Define commonly used functions
 
-然后定义常用的几个函数，方便调用
+Then define a few commonly used functions to make it easier to call them.
 
 ```python
-#———————————————————— 定义相关函数 ————————————————————#
-# 获取表名
+#———————————————————— Defining Related Functions ————————————————————#
+# Get table name
 def get_tables(con, dbname):
     con.execute("SHOW TABLES")
     results = con.fetchall()
     tables_name = [item for sublist in results for item in sublist]
     return tables_name
 
-# 周期转换函数
+# periodic conversion function
 def transfer_to_period_data(df, rule_type):
     period_df = df.resample(rule=rule_type, on='open_time_GMT8', label='left', closed='left').agg(
         {'open': 'first',
@@ -120,10 +120,10 @@ def transfer_to_period_data(df, rule_type):
 
 def export_table_by_date(table_name, date_columns, start_date, end_date):
     """
-    指定时间获取相关数据
+    Getting relevant data at a specified time
     Args:
         table_name: eg. eth_usdt
-        date_columns: 时间列 eg. "open_time_GMT8"
+        date_columns: time series eg. "open_time_GMT8"
     Returns:Pandas.DataFrmae()
     """
     try:
@@ -141,12 +141,12 @@ def export_table_by_date(table_name, date_columns, start_date, end_date):
         return None, e    
 ```
 
-### 打印数据库信息
+### Print database information
 
-我们先打印一下数据库内存有那些表
+Let's print out the tables that are in the database memory
 
 ```python
-## 获取指定数据库内所有表的表名
+## Get the table names of all tables in the specified database
 tables_names = get_tables(con, dbname)
 print(tables_names, len(tables_names))
 ```
@@ -157,7 +157,7 @@ output:
 ['1inch_usdt', 'aave_usdt', 'aca_usdt', 'ach_usdt', 'acm_usdt', 'ada_usdt', 'adx_usdt', 'agld_usdt', 'aion_usdt', 'akro_usdt', 'alcx_usdt', 'algo_usdt', 'alice_usdt', 'alpaca_usdt', 'alpha_usdt', 'alpine_usdt', 'amp_usdt', 'anc_usdt', 'ankr_usdt', 'ant_usdt', 'any_usdt', 'ape_usdt', 'api3_usdt', 'apt_usdt', 'ar_usdt', 'ardr_usdt', 'arpa_usdt', 'asr_usdt', 'astr_usdt', 'ata_usdt', 'atm_usdt', 'atom_usdt', 'auction_usdt', 'aud_usdt', 'audio_usdt', 'auto_usdt', 'ava_usdt', 'avax_usdt', 'axs_usdt', 'badger_usdt', 'bake_usdt', 'bal_usdt', 'band_usdt', 'bar_usdt', 'bat_usdt', 'bcc_usdt', 'bch_usdt', 'bchabc_usdt', 'bchsv_usdt', 'beam_usdt', 'bel_usdt', 'beta_usdt', 'bico_usdt', 'bifi_usdt', 'bkrw_usdt', 'blz_usdt', 'bnb_usdt', 'bnt_usdt', 'bnx_usdt', 'bond_usdt', 'bsw_usdt', 'btc_usdt', 'btcst_usdt', 'btg_usdt', 'bts_usdt', 'btt_usdt', 'bttc_usdt', 'burger_usdt', 'busd_usdt', 'bzrx_usdt', 'c98_usdt', 'cake_usdt', 'celo_usdt', 'celr_usdt', 'cfx_usdt', 'chess_usdt', 'chr_usdt', 'chz_usdt', 'city_usdt', 'ckb_usdt', 'clv_usdt', 'cocos_usdt', 'comp_usdt', 'cos_usdt', 'coti_usdt', 'crv_usdt', 'ctk_usdt', 'ctsi_usdt', 'ctxc_usdt', 'cvc_usdt', 'cvp_usdt', 'cvx_usdt', 'dai_usdt', 'dar_usdt', 'dash_usdt', 'data_usdt', 'dcr_usdt', 'dego_usdt', 'dent_usdt', 'dexe_usdt', 'df_usdt', 'dgb_usdt', 'dia_usdt', 'dnt_usdt', 'dock_usdt', 'dodo_usdt', 'doge_usdt', 'dot_usdt', 'drep_usdt', 'dusk_usdt', 'dydx_usdt', 'egld_usdt', 'elf_usdt', 'enj_usdt', 'ens_usdt', 'eos_usdt', 'eps_usdt', 'epx_usdt', 'erd_usdt', 'ern_usdt', 'etc_usdt', 'eth_usdt', 'eur_usdt', 'farm_usdt', 'fet_usdt', 'fida_usdt', 'fil_usdt', 'fio_usdt', 'firo_usdt', 'fis_usdt', 'flm_usdt', 'flow_usdt', 'flux_usdt', 'for_usdt', 'forth_usdt', 'front_usdt', 'ftm_usdt', 'ftt_usdt', 'fun_usdt', 'fxs_usdt', 'gal_usdt', 'gala_usdt', 'gbp_usdt', 'ghst_usdt', 'glmr_usdt', 'gmt_usdt', 'gmx_usdt', 'gno_usdt', 'grt_usdt', 'gtc_usdt', 'gto_usdt', 'gxs_usdt', 'hard_usdt', 'hbar_usdt', 'hc_usdt', 'hft_usdt', 'hifi_usdt', 'high_usdt', 'hive_usdt', 'hnt_usdt', 'hot_usdt', 'icp_usdt', 'icx_usdt', 'idex_usdt', 'ilv_usdt', 'imx_usdt', 'inj_usdt', 'iost_usdt', 'iota_usdt', 'iotx_usdt', 'iris_usdt', 'jasmy_usdt', 'joe_usdt', 'jst_usdt', 'juv_usdt', 'kava_usdt', 'kda_usdt', 'keep_usdt', 'key_usdt', 'klay_usdt', 'kmd_usdt', 'knc_usdt', 'kp3r_usdt', 'ksm_usdt', 'lazio_usdt', 'ldo_usdt', 'lend_usdt', 'lever_usdt', 'lina_usdt', 'link_usdt', 'lit_usdt', 'loka_usdt', 'lqty_usdt', 'lrc_usdt', 'lsk_usdt', 'ltc_usdt', 'lto_usdt', 'luna_usdt', 'magic_usdt', 'mana_usdt', 'mask_usdt', 'matic_usdt', 'mbl_usdt', 'mbox_usdt', 'mc_usdt', 'mco_usdt', 'mdt_usdt', 'mdx_usdt', 'mft_usdt', 'mina_usdt', 'mir_usdt', 'mith_usdt', 'mkr_usdt', 'mln_usdt', 'mob_usdt', 'movr_usdt', 'mtl_usdt', 'multi_usdt', 'nano_usdt', 'nbs_usdt', 'nbt_usdt', 'near_usdt', 'neo_usdt', 'nexo_usdt', 'nkn_usdt', 'nmr_usdt', 'npxs_usdt', 'nu_usdt', 'nuls_usdt', 'ocean_usdt', 'og_usdt', 'ogn_usdt', 'om_usdt', 'omg_usdt', 'one_usdt', 'ong_usdt', 'ont_usdt', 'ooki_usdt', 'op_usdt', 'orn_usdt', 'oxt_usdt', 'pax_usdt', 'paxg_usdt', 'people_usdt', 'perl_usdt', 'perp_usdt', 'pha_usdt', 'pla_usdt', 'pnt_usdt', 'pols_usdt', 'poly_usdt', 'polyx_usdt', 'pond_usdt', 'porto_usdt', 'powr_usdt', 'psg_usdt', 'pundix_usdt', 'pyr_usdt', 'qi_usdt', 'qnt_usdt', 'qtum_usdt', 'quick_usdt', 'rad_usdt', 'ramp_usdt', 'rare_usdt', 'ray_usdt', 'reef_usdt', 'rei_usdt', 'rep_usdt', 'req_usdt', 'rgt_usdt', 'rif_usdt', 'rlc_usdt', 'rndr_usdt', 'rose_usdt', 'rpl_usdt', 'rsr_usdt', 'rune_usdt', 'sand_usdt', 'santos_usdt', 'sc_usdt', 'scrt_usdt', 'sfp_usdt', 'shib_usdt', 'skl_usdt', 'slp_usdt', 'snx_usdt', 'sol_usdt', 'spell_usdt', 'srm_usdt', 'steem_usdt', 'stg_usdt', 'stmx_usdt', 'storj_usdt', 'storm_usdt', 'stpt_usdt', 'strat_usdt', 'strax_usdt', 'stx_usdt', 'sun_usdt', 'susd_usdt', 'sushi_usdt', 'sxp_usdt', 'sys_usdt', 't_usdt', 'tct_usdt', 'tfuel_usdt', 'theta_usdt', 'tko_usdt', 'tlm_usdt', 'tomo_usdt', 'torn_usdt', 'trb_usdt', 'tribe_usdt', 'troy_usdt', 'tru_usdt', 'trx_usdt', 'tusd_usdt', 'tvk_usdt', 'twt_usdt', 'uma_usdt', 'unfi_usdt', 'uni_usdt', 'usdc_usdt', 'usdp_usdt', 'ust_usdt', 'utk_usdt', 'ven_usdt', 'vet_usdt', 'vgx_usdt', 'vidt_usdt', 'vite_usdt', 'voxel_usdt', 'vtho_usdt', 'wan_usdt', 'waves_usdt', 'waxp_usdt', 'win_usdt', 'wing_usdt', 'wnxm_usdt', 'woo_usdt', 'wrx_usdt', 'wtc_usdt', 'xec_usdt', 'xem_usdt', 'xlm_usdt', 'xmr_usdt', 'xno_usdt', 'xrp_usdt', 'xtz_usdt', 'xvg_usdt', 'xvs_usdt', 'xzc_usdt', 'yfi_usdt', 'yfii_usdt', 'ygg_usdt', 'zec_usdt', 'zen_usdt', 'zil_usdt', 'zrx_usdt'] 360
 ```
 
-再来输出表中的数据查看下数据结构 ：
+Then output the data in the table to see the data structure :
 
 ```python
 symbol = 'btc_usdt'
@@ -308,7 +308,7 @@ output：
 <p>349921 rows × 8 columns</p>
 
 ```python
-# 对表进行过滤 只保留认可度较高的表 
+# Filter the tables to keep only the ones with high recognition. 
 tables = ['btc_usdt', 'eth_usdt', 'bch_usdt', 'xrp_usdt', 'eos_usdt', 'ltc_usdt', 'trx_usdt', 'etc_usdt',             'link_usdt', 'xlm_usdt', 'xmr_usdt', 'dash_usdt', 'zec_usdt', 'xtz_usdt', 'bnb_usdt', 'atom_usdt',
            'ont_usdt', 'iota_usdt', 'bat_usdt', 'vet_usdt', 'neo_usdt', 'qtum_usdt', 'iost_usdt','theta_usdt','algo_usdt', 'zil_usdt', 'knc_usdt', 'zrx_usdt', 'comp_usdt', 'omg_usdt', 'doge_usdt', 'sxp_usdt', 'kava_usdt',
           'band_usdt', 'rlc_usdt', 'waves_usdt', 'snx_usdt', 'dot_usdt', 'yfi_usdt', 'bal_usdt', 'crv_usdt', 'ada_usdt', 'trb_usdt', 'rune_usdt', 
@@ -327,7 +327,7 @@ print(len(tables))
 output: 135
 
 ```python
-## 把所有数据存入文件 方便后续分析
+## All the data is stored in a file for subsequent analysis.
 for i in tables:
     df, error = export_table_by_date(i, date_columns, start_time, end_time)
     if df is None:
@@ -340,7 +340,7 @@ for i in tables:
         df_dict[i] = df
 ```
 
-### 数据进行分组处理
+### Grouping of data
 
 ```python
 df_close = pd.DataFrame(index=pd.date_range(start=start_time, end=end_time, freq=rule_type),columns=df_dict.keys())
@@ -364,19 +364,19 @@ df_amount = df_count.dropna(how='all')
 ```
 
 ```python
-# 归一化处理并输出
+# Normalization process and output
 df_norm = df_close/df_close.fillna(method='bfill').iloc[0] #归一化
 df_norm.mean(axis=1).plot(figsize=(15,6),grid=True);
 ```
 
 ![](https://s2.loli.net/2023/09/02/ldnZog3aycCT7NF.png)
 
-我们可以看到行情非常差 从年初的1.0 到了9月份的0.3，市值跌倒开始的35%
+As we can see the market is very poor going from 1.0 at the beginning of the year to 0.3 in September and the market capitalization is down 35% of what it started with
 
-### 回测引擎
+### The backtesting engine ##
 
 ```python
-#回测引擎
+# Backtesting engine
 class Exchange:
   
     def __init__(self, trade_symbols, fee=0.0004, initial_balance=10000):
@@ -429,7 +429,7 @@ class Exchange:
         self.account['USDT']['total'] = round(self.account['USDT']['realised_profit'] + self.initial_balance + self.account['USDT']['unrealised_profit'],6)
         self.account['USDT']['leverage'] = round(self.account['USDT']['hold']/self.account['USDT']['total'],3)
 
-#测试因子的函数
+# Functions for test factors
 def Test(factor, symbols, period=1, N=40, value=300):
     e = Exchange(symbols, fee=0.0002, initial_balance=10000)
     res_list = []
@@ -452,7 +452,7 @@ def Test(factor, symbols, period=1, N=40, value=300):
 ```
 
 ```python
-#成交量
+#Volume
 factor_volume = df_volume
 factor_volume_res = Test(factor_volume, tables, period=4)
 factor_volume_res.total.plot(figsize=(15,6),grid=True);
@@ -463,7 +463,7 @@ factor_volume_res.total.plot(figsize=(15,6),grid=True);
 
 
 ```python
-#3小时动量因子
+#3 hour momentum factor
 factor_1 =  (df_close - df_close.shift(3))/df_close.shift(3)
 factor_1_res = Test(factor_1,tables,period=1)
 factor_1_res.total.plot(figsize=(15,6),grid=True);
@@ -472,7 +472,7 @@ factor_1_res.total.plot(figsize=(15,6),grid=True);
 ![](https://s2.loli.net/2023/09/02/EV8n1y7qUkpS3tH.png)
 
 ```python
-#24小时动量因子
+#24 hour momentum factor
 factor_1 =  (df_close - df_close.shift(24))/df_close.shift(3)
 factor_1_res = Test(factor_1,tables,period=1)
 factor_1_res.total.plot(figsize=(15,6),grid=True);
@@ -483,7 +483,7 @@ factor_1_res.total.plot(figsize=(15,6),grid=True);
 
 
 ```python
-#成交量因子
+#Volume Factor
 factor_3 = df_volume.rolling(24).mean()/df_volume.rolling(96).mean()
 factor_3_res = Test(factor_3, tables, period=8)
 factor_3_res.total.plot(figsize=(15,6),grid=True);
@@ -492,7 +492,7 @@ factor_3_res.total.plot(figsize=(15,6),grid=True);
 ![](https://s2.loli.net/2023/09/02/QJIhoTDyAgbN2Gp.png)
 
 ```python
-#波动率因子
+# Volatility factor
 factor_7 = (df_close/df_open).rolling(24).std()
 factor_7_res = Test(factor_7, tables, period=2)
 factor_7_res.total.plot(figsize=(15,6),grid=True);
@@ -501,7 +501,7 @@ factor_7_res.total.plot(figsize=(15,6),grid=True);
 ![](https://s2.loli.net/2023/09/02/Hosq4jl3hw1TRav.png)
 
 ```python
-#成交量和收盘价相关性因子
+# Volume and closing price correlation factors
 factor_8 = df_close.rolling(96).corr(df_volume)
 factor_8_res = Test(factor_8, tables, period=4)
 factor_8_res.total.plot(figsize=(15,6),grid=True);
@@ -510,7 +510,7 @@ factor_8_res.total.plot(figsize=(15,6),grid=True);
 ![](https://s2.loli.net/2023/09/02/LMWGIzD52XdJsNV.png)
 
 ```python
-#标准化函数，去除缺失值和极值，并且进行标准化处理
+# Normalization function, removing missing and extreme values and normalized
 def norm_factor(factor):
     factor = factor.dropna(how='all')
     factor_clip = factor.apply(lambda x:x.clip(x.quantile(0.2), x.quantile(0.8)),axis=1)
@@ -525,9 +525,9 @@ factor_7_norm = norm_factor(factor_7)
 factor_8_norm = norm_factor(factor_8)
 ```
 
-### 多因子合成
+### polyfactor synthesis
 ```python
-## 多因子回测
+## Multi-factor backtesting
 factor_total = 0.6*df_volume_norm + 0.4*factor_close_norm + 0.5*factor_3_norm + 0.3*factor_7_norm + 0.4*factor_8_norm
 factor_total_res = Test(factor_total, tables, period=8)
 factor_total_res.total.plot(figsize=(15,6),grid=True);
@@ -535,8 +535,8 @@ factor_total_res.total.plot(figsize=(15,6),grid=True);
 
 ![](https://s2.loli.net/2023/09/02/GvJXMp7ZTkVAu3o.png)
 
-## 总结
+## Summary
 
-本文是发明者文章上的一个复现，仅仅修改了少量参数， 因此得到的结果也有类似之处。
+This paper is a replication of the inventor's article, with only a few parameter changes, so the results are similar.
 
-在回测的数据中我们可以看出 多因子的表现还不如 动量的单因子表现，我们也正在寻找表现更好的多因子。多因子策略还有很多的玩法，很大的提升空间，希望我们可以一同探讨。
+In the backtesting data, we can see that the multi-factor performance is not as good as the single-factor performance of Momentum, and we are looking for multi-factors with better performance. We are looking for better multi-factor performance. There are still a lot of ways to play with multi-factor strategies and a lot of room for improvement, so I hope we can discuss this together.
